@@ -70,14 +70,11 @@ public class ItemBuilder {
   }
   
   public List<Component> description() {
-    if (!this.hasDescription()) {
-      return new ArrayList<>();
-    }
-    return meta.lore();
+    return item.lore() == null ? List.of() : item.lore();
   }
   
   public boolean hasDescription() {
-    return meta != null && this.meta.hasLore();
+    return item.lore() != null;
   }
   
   public ItemBuilder description(Component... description) {
@@ -85,7 +82,9 @@ public class ItemBuilder {
   }
   
   public ItemBuilder description(List<Component> description) {
-    meta.lore(description.stream().map(x -> x.decoration(TextDecoration.ITALIC, false)).collect(Collectors.toList()));
+    meta.lore(description.stream()
+                         .map(x -> x.decoration(TextDecoration.ITALIC, false))
+                         .toList());
     return this;
   }
   
@@ -154,7 +153,7 @@ public class ItemBuilder {
   
   public ItemBuilder customEffect(PotionEffect effect) {
     if (isPotionMeta()) {
-      ((PotionMeta) meta).addCustomEffect(effect, false);
+      ((PotionMeta) meta).addCustomEffect(effect, true);
     }
     return this;
   }
@@ -175,8 +174,7 @@ public class ItemBuilder {
   }
   
   public ItemBuilder customModelData(int data) {
-    meta.setCustomModelData(data);
-    return this;
+    return model(data);
   }
   
   public ItemBuilder tag(NamespacedKey key, String value) {
@@ -205,7 +203,9 @@ public class ItemBuilder {
   }
   
   public ItemBuilder setCanPlace(Collection<Material> blocks) {
-    meta.setPlaceableKeys(blocks.stream().map(Material::getKey).collect(Collectors.toSet()));
+    meta.setPlaceableKeys(blocks.stream()
+                                .map(Material::getKey)
+                                .collect(Collectors.toSet()));
     return this;
   }
   
